@@ -2,7 +2,6 @@ package com.devonfw.tools.ide.url.updater;
 
 import java.nio.file.Path;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.List;
 
 import org.slf4j.Logger;
@@ -13,6 +12,7 @@ import com.devonfw.tools.ide.url.model.report.UrlFinalReport;
 import com.devonfw.tools.ide.url.tool.androidstudio.AndroidStudioUrlUpdater;
 import com.devonfw.tools.ide.url.tool.aws.AwsUrlUpdater;
 import com.devonfw.tools.ide.url.tool.az.AzureUrlUpdater;
+import com.devonfw.tools.ide.url.tool.corepack.CorepackUrlUpdater;
 import com.devonfw.tools.ide.url.tool.docker.DockerDesktopUrlUpdater;
 import com.devonfw.tools.ide.url.tool.docker.DockerRancherDesktopUrlUpdater;
 import com.devonfw.tools.ide.url.tool.dotnet.DotNetUrlUpdater;
@@ -36,6 +36,7 @@ import com.devonfw.tools.ide.url.tool.kotlinc.KotlincUrlUpdater;
 import com.devonfw.tools.ide.url.tool.lazydocker.LazyDockerUrlUpdater;
 import com.devonfw.tools.ide.url.tool.mvn.Mvn4UrlUpdater;
 import com.devonfw.tools.ide.url.tool.mvn.MvnUrlUpdater;
+import com.devonfw.tools.ide.url.tool.ng.NgUrlUpdater;
 import com.devonfw.tools.ide.url.tool.node.NodeUrlUpdater;
 import com.devonfw.tools.ide.url.tool.npm.NpmUrlUpdater;
 import com.devonfw.tools.ide.url.tool.oc.OcUrlUpdater;
@@ -47,31 +48,32 @@ import com.devonfw.tools.ide.url.tool.quarkus.QuarkusUrlUpdater;
 import com.devonfw.tools.ide.url.tool.sonar.SonarUrlUpdater;
 import com.devonfw.tools.ide.url.tool.terraform.TerraformUrlUpdater;
 import com.devonfw.tools.ide.url.tool.tomcat.TomcatUrlUpdater;
+import com.devonfw.tools.ide.url.tool.uv.UvUrlUpdater;
 import com.devonfw.tools.ide.url.tool.vscode.VsCodeUrlUpdater;
 
 /**
  * The {@code UpdateManager} class manages the update process for various tools by using a list of {@link AbstractUrlUpdater}s to update the
- * {@link UrlRepository}. The list of {@link AbstractUrlUpdater}s contains crawlers for different tools and services, To use the UpdateManager, simply create an
- * instance with the path to the repository as a parameter and call the {@link #updateAll(UrlFinalReport)} method.
+ * {@link UrlRepository}. Each {@link AbstractUrlUpdater} is responsible for a specific {@link AbstractUrlUpdater#getTool() tool} and typically also edition.
  */
 public class UpdateManager extends AbstractProcessorWithTimeout {
 
-  private static final Logger logger = LoggerFactory.getLogger(AbstractUrlUpdater.class);
+  private static final Logger logger = LoggerFactory.getLogger(UpdateManager.class);
 
   private final UrlRepository urlRepository;
 
-  private UrlFinalReport urlFinalReport;
+  private final UrlFinalReport urlFinalReport;
 
-  private final List<AbstractUrlUpdater> updaters = Arrays.asList(
-      new AndroidStudioUrlUpdater(), new AwsUrlUpdater(), new AzureUrlUpdater(), new DockerDesktopUrlUpdater(), new DotNetUrlUpdater(),
+  private final List<AbstractUrlUpdater> updaters = List.of(
+      new AndroidStudioUrlUpdater(), new AwsUrlUpdater(), new AzureUrlUpdater(), new CorepackUrlUpdater(), new DockerDesktopUrlUpdater(),
+      new DotNetUrlUpdater(),
       new EclipseCppUrlUpdater(), new EclipseJeeUrlUpdater(), new EclipseJavaUrlUpdater(), new GCloudUrlUpdater(),
       new GcViewerUrlUpdater(), new GhUrlUpdater(), new GraalVmCommunityUpdater(), new GraalVmOracleUrlUpdater(),
       new GradleUrlUpdater(), new HelmUrlUpdater(), new IntellijUrlUpdater(), new JasyptUrlUpdater(),
       new JavaUrlUpdater(), new JenkinsUrlUpdater(), new JmcUrlUpdater(), new KotlincUrlUpdater(),
       new KotlincNativeUrlUpdater(), new LazyDockerUrlUpdater(), new MvnUrlUpdater(), new Mvn4UrlUpdater(),
-      new NodeUrlUpdater(), new NpmUrlUpdater(), new OcUrlUpdater(), new PgAdminUrlUpdater(), new PipUrlUpdater(), new PycharmUrlUpdater(),
+      new NgUrlUpdater(), new NodeUrlUpdater(), new NpmUrlUpdater(), new OcUrlUpdater(), new PgAdminUrlUpdater(), new PipUrlUpdater(), new PycharmUrlUpdater(),
       new PythonUrlUpdater(), new QuarkusUrlUpdater(), new DockerRancherDesktopUrlUpdater(), new SonarUrlUpdater(),
-      new TerraformUrlUpdater(), new TomcatUrlUpdater(), new VsCodeUrlUpdater());
+      new TerraformUrlUpdater(), new TomcatUrlUpdater(), new UvUrlUpdater(), new VsCodeUrlUpdater());
 
   /**
    * The constructor.
@@ -84,6 +86,14 @@ public class UpdateManager extends AbstractProcessorWithTimeout {
     this.urlRepository = UrlRepository.load(pathToRepository);
     this.urlFinalReport = urlFinalReport;
     setExpirationTime(expirationTime);
+  }
+
+  /**
+   * @return the {@link List} with all registered {@link AbstractUrlUpdater updaters}.
+   */
+  public List<AbstractUrlUpdater> getUpdaters() {
+
+    return this.updaters;
   }
 
   /**
@@ -126,5 +136,33 @@ public class UpdateManager extends AbstractProcessorWithTimeout {
       logger.error("Failed to update {}", updater.getToolWithEdition(), e);
     }
   }
+
+  /**
+   * Retrieves a specific {@link AbstractUrlUpdater} based on tool name and edition.
+   *
+   * @param tool the name of the tool (e.g., "java").
+   * @param edition the edition of the tool (e.g., "oracle", "community").
+   * @return the matching {@link AbstractUrlUpdater}, or {@code null} if not found.
+   */
+  public AbstractUrlUpdater retrieveUrlUpdater(String tool, String edition) {
+
+    for (AbstractUrlUpdater updater : updaters) {
+      if (updater.getTool().equals(tool) && updater.getEdition().equals(edition)) {
+        return updater;
+      }
+    }
+    return null;
+  }
+
+  /**
+   * Returns the {@link UrlRepository} instance used for storing and updating tool URLs.
+   *
+   * @return the {@link UrlRepository} instance.
+   */
+  public UrlRepository getUrlRepository() {
+
+    return this.urlRepository;
+  }
+
 
 }
